--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 cma>=3.2.2
 numpy>=1.22.2
-pymoo==0.6.0.1
-scipy~=1.8.0
-toolz~=0.11.2
-matplotlib~=3.5.1
+pymoo>=0.6.0.1
+scipy>=1.8.0
+toolz>=0.11.2
+matplotlib>=3.5.1
