--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
         language_version: python3.11
         additional_dependencies:
           - numpy
-        files: ^(nirx_py/|tests/)
+        files: ^(pyhms/|test/)
   - repo: https://github.com/pycqa/flake8
     rev: 6.0.0
     hooks:
