--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+# Utilities
+dill>=0.3.7
+structlog>=24.1.0
+# Algorithmic core
 cma>=3.2.2
-leap-ec>=0.8.1
 numpy>=1.22.2
+leap-ec>=0.8.1
 scipy>=1.8.0
 toolz>=0.11.2
-matplotlib>=3.5.1
 treelib>=1.7.0
-structlog>=24.1.0
+# Visualization
+matplotlib>=3.5.1
