--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ matplotlib = ">=3.5.1"
 treelib = ">=1.7.0"
 setuptools = ">=63.2.0"
 structlog = "^24.1.0"
+dill = "^0.3.8"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
