--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,8 @@ dill = "^0.3.8"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
 pytest-cov = "^4.1.0"
+sphinx = "^7.2.6"
+myst-parser = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core"]
