--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -55,3 +55,9 @@ jobs:
 
       - name: Run tests
         run: poetry run pytest test/ --cov
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: agh-a2s/pyhms
