feat: uploade coverage reports to codecov

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -57,6 +57,12 @@ jobs:
         run: poetry run pytest test/ --cov
 
       - name: Upload coverage reports to Codecov
+        run: |
+          curl -Os https://uploader.codecov.io/latest/linux/codecov
+          chmod +x codecov
+          ./codecov -t ${CODECOV_TOKEN}
+
+      - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
