--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -54,13 +54,7 @@ jobs:
         run: poetry run pre-commit run --all-files
 
       - name: Run tests
-        run: poetry run pytest test/ --cov
-
-      - name: Upload coverage reports to Codecov
-        run: |
-          curl -Os https://uploader.codecov.io/latest/linux/codecov
-          chmod +x codecov
-          ./codecov -t ${CODECOV_TOKEN}
+        run: poetry run pytest test/ --cov --cov-report=xml
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
