--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -2,6 +2,15 @@ name: Test
 on:
   workflow_dispatch:
   workflow_call:
+  push:
+    branches:
+      - main
+    paths:
+      - pyproject.toml
+      - poetry.lock
+      - "pyhms/**"
+      - "test/**"
+      - .github/workflows/pytest.yml
   pull_request:
     types: [opened, synchronize, reopened]
     paths:
