--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -2,6 +2,15 @@ name: Test
 on:
   workflow_dispatch:
   workflow_call:
+  push:
+    branches:
+      - main
+    paths:
+      - pyproject.toml
+      - poetry.lock
+      - "pyhms/**"
+      - "test/**"
+      - .github/workflows/pytest.yml
   pull_request:
     types: [opened, synchronize, reopened]
     paths:
@@ -54,4 +63,10 @@ jobs:
         run: poetry run pre-commit run --all-files
 
       - name: Run tests
-        run: poetry run pytest test/ --cov
+        run: poetry run pytest test/ --cov --cov-report=xml
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: agh-a2s/pyhms
