--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,18 @@ dill = "^0.3.8"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
 pytest-cov = "^4.1.0"
-sphinx = "^7.2.6"
+
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "7.2.6"
+sphinx_rtd_theme = "2.0.0"
+readthedocs-sphinx-search = "0.3.2"
+
+[tool.poetry.group.docs]
+optional = true
+
 
 [build-system]
 requires = ["poetry-core"]
