--- a/docs/Makefile
+++ b/docs/Makefile
@@ -5,6 +5,7 @@
 # from the environment for the first two.
 SPHINXOPTS    ?=
 SPHINXBUILD   ?= sphinx-build
+SPHINXPROJ    = pyhms
 SOURCEDIR     = .
 BUILDDIR      = _build
 
