--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,14 @@
 sphinx==7.2.6
 sphinx_rtd_theme==2.0.0
 readthedocs-sphinx-search==0.3.2
+numpy>=1.13
+cma>=3.2.2
+leap-ec=>=0.7.0
+numpy>=1.22.2
+scipy>=1.8.0
+toolz>=0.11.2
+matplotlib>=3.5.1
+treelib>=1.7.0
+setuptools>=63.2.0
+structlog>=24.1.0
+dill>=0.3.8
