--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ treelib = ">=1.7.0"
 setuptools = ">=63.2.0"
 structlog = "^24.1.0"
 dill = "^0.3.8"
+scikit-learn = "^1.4.1.post1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
