--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ treelib = ">=1.7.0"
 setuptools = ">=63.2.0"
 structlog = "^24.1.0"
 dill = "^0.3.8"
+ipykernel = "^6.29.3"
+nbformat = "^5.10.3"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
