--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ dill = "^0.3.8"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
 pytest-cov = "^4.1.0"
+ipykernel = "^6.29.3"
+nbformat = "^5.10.3"
 
 [tool.poetry.group.dev]
 optional = true
