feat: add pandas

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ treelib = ">=1.7.0"
 setuptools = ">=63.2.0"
 structlog = "^24.1.0"
 dill = "^0.3.8"
+pandas = "^2.2.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
