--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,6 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.10"
 cma = ">=3.2.2"
-leap-ec = ">=0.7.0"
 numpy = ">=1.22.2"
 scipy = ">=1.8.0"
 matplotlib = ">=3.5.1"
@@ -38,6 +37,7 @@ treelib = ">=1.7.0"
 setuptools = ">=63.2.0"
 structlog = "^24.1.0"
 dill = "^0.3.8"
+pandas = "^2.2.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
