--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.10"
 cma = ">=3.2.2"
-numpy = ">=1.22.2"
+numpy = "<2"
 scipy = ">=1.8.0"
 matplotlib = ">=3.5.1"
 treelib = ">=1.7.0"
