--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ setuptools = ">=63.2.0"
 structlog = "^24.1.0"
 dill = "^0.3.8"
 pandas = "^2.2.2"
+scikit-learn = "^1.5.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
