--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ setuptools = ">=63.2.0"
 structlog = "^24.1.0"
 dill = "^0.3.8"
 pandas = "^2.2.2"
+plotly = "^5.22.0"
+kaleido = "0.2.1"
 scikit-learn = "^1.5.1"
 
 [tool.poetry.group.dev.dependencies]
