--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ pandas = "^2.2.2"
 plotly = "^5.22.0"
 kaleido = "0.2.1"
 scikit-learn = "^1.5.1"
+pykrige = "^1.7.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
